--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
-
 {
   "name": "social-app",
   "version": "1.0.0",
   "description": "A simple social media-like app",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "echo \"No tests specified\" && exit 0"  // Placeholder for no tests
   },
   "author": "Sai",
   "license": "ISC",
@@ -13,4 +13,3 @@
     "express": "^4.18.2"
   }
 }
-
