--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"No tests specified\" && exit 0"  // Placeholder for no tests
+    "test": "echo \"No tests specified\" && exit 0" 
   },
   "author": "Sai",
   "license": "ISC",
