--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
-
 {
   "name": "social-app",
   "version": "1.0.0",
   "description": "A simple social media-like app",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "echo \"No tests available yet\""
   },
   "author": "Sai",
   "license": "ISC",
